--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,41 @@
-/* . 
-{
-    padding
-}*/
+body {
+	font-family: Arial, sans-serif;
+	margin: 0;
+	padding: 0;
+	background-color: #f5f5f5;
+}
+
+header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	background-color: #333;
+	color: #fff;
+	padding: 10px;
+    padding-left: 50px;
+    padding-right: 50px;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	z-index: 1;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+header img {
+	border-radius: 50%;
+	height: 100px;
+	width: 100px;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+main {
+	margin-top: 120px;
+	padding-left: 50px;
+    padding-right: 50px;
+}
+h3{
+
+    font-style: normal;
+    
+}
